--- a/style.css
+++ b/style.css
@@ -44,12 +44,17 @@ body {
 
 .main-left {
   padding: 1rem;
-  width: 30%;
+  width: 33.333333333333%;
+}
+
+.main-middle {
+  padding: 1rem;
+  width: 33.333333333333%;
 }
 
 .main-right {
   padding: 1rem;
-  width: 70%;
+  width: 33.333333333333%;
 }
 
 /* Content */
@@ -81,6 +86,7 @@ body {
   display: inline-block;
   color: #de3c4b;
   line-height: 1;
+  
 }
 
 .maintainer {
@@ -88,10 +94,11 @@ body {
   padding: 0;
   margin: 0;
   color: #2c292d;
-  font-size: 1rem;
+  font-size: 0.9rem;
   font-family: monospace;
   line-height: 1;
   letter-spacing: -0.2px;
+  padding-bottom: 0.5rem;
 }
 
 .link {
@@ -117,6 +124,17 @@ body {
   background: #00000017;
   overflow-x: hidden;
   overflow-y: auto;
+}
+
+
+.viz {
+  border: 1px solid #222;
+  border-radius: 6px;
+  height: 90%;
+  width: 100%;
+  padding: 1rem;
+  overflow-x: hidden;
+  overflow-y: auto
 }
 
 .output {
